Use ResourceEntry instead of mandatory paks for blimp
On earlier versions of Android where Dalvik was selected as the
runtime, the Blimp java tests would fail to run because of an assert.

This fixes running these tests by calling
ResourceExtractor.setResourcesToExtract(...) instead of the deprecated
setMandatoryPaksToExtract(...) method.

Since this was the last caller of setMandatoryPaksToExtract(...), this
CL also removes that method.

In addition, this fixes a minor warning by using Boolean.valueOf(foo)
instead of new Boolean(foo).

BUG=None

Review URL: https://codereview.chromium.org/1711873003

Cr-Commit-Position: refs/heads/master@{#376286}

Former-commit-id: 4ec5a3218902158763aba8a2008cce34401f40f1